--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "name": "static-site",
   "version": "1.0.0",
-  "description": "",
+  "description": "[How to create a Professional README](https://coding-boot-camp.github.io/full-stack/github/professional-readme-guide)",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "nux",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^6.3.1"
-  }
+    "inquirer": "^8.2.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DanielleSison/nux-legere-xiv.git"
+  },
+  "bugs": {
+    "url": "https://github.com/DanielleSison/nux-legere-xiv/issues"
+  },
+  "homepage": "https://github.com/DanielleSison/nux-legere-xiv#readme"
 }
